# elevenlabs-unleashed

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: account_generator.py
src/elevenlabs_unleashed/: account.py  manager.py  tts.py
