[project]
name = "elevenlabs_unleashed"
version = "0.2.2"
authors = [{ name = "GaspardCulis", email = "gasdev.lp@gmail.com" }]
description = "Unlimited access to Elevenlabs API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GaspardCulis/elevenlabs-unleashed"
"Bug Tracker" = "https://github.com/GaspardCulis/elevenlabs-unleashed/issues"

[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38", "elevenlabs >= 0.2.21"]
build-backend = "setuptools.build_meta"
